# homework-1

./: .gitignore  main.py  mod_8_py  sort.py
Homeworks/Mod_11/: main.py
Homeworks/Mod_12/: main.py
Homeworks/Mod_9/: main.py
Homeworks/clean_folder/: setup.py
Homeworks_core/Mod_8/: main.py
py_core/Mod_10/: main.py
py_core/clean_folder/: setup.py
py_web/01_oop/: 01_uml.drawio  addressbook.pickle  main.py  notebook.pickle
py_web/02_py-dev/: Dockerfile  pyproject.toml  requirements.txt
py_web/02_py-dev/tough_assistant/: address_book.py
py_web/03_processes/: 03_linear.py  03_processes.py  03_threads.py
py_web/04_web-basic/: Dockerfile
py_web/05_async/: index.html  main.py
py_web/06_sql/: connection.py  headers.py  main.py
py_web/07_orm/: config.ini  db.py  headers.py  models.py  my_select.py  pyproject.toml  seed.py
py_web/07_orm/migration/: env.py
py_web/07_orm/migration/versions/: ccb1db13c82b_init.py
py_web/09_web-scrapping/: authors.json  config.ini  connect.py  main.py  models.py  seeds.py
py_web/11_FastApi/: main.py
py_web/12-auth/: main.py
py_web/13_Backend/: .gitignore
py_web/14_web-testing/: .coverage  .gitignore  main.py  pyproject.toml
py_web/14_web-testing/docs/source/: conf.py
py_web/14_web-testing/migrations/versions/: 15840ab347fd_release.py  43920c072ab4_init.py  c0aaee0d010e_release_14.py
py_web/14_web-testing/src/conf/: config.py  messages.py
py_web/14_web-testing/src/database/: connect.py
py_web/14_web-testing/src/entity/: models.py
py_web/14_web-testing/src/repository/: contacts.py  users.py
py_web/14_web-testing/src/routes/: auth.py  contacts.py  users.py
py_web/14_web-testing/src/schemas/: contact.py  user.py
py_web/14_web-testing/src/services/: auth.py  email.py
py_web/14_web-testing/tests/: conftest.py  conftest____.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_contacts.py
(+103 files in other folders)
