[tool.poetry]
name = "tough-assistant"
version = "0.1.0"
description = "Bot-Assistant"
authors = ["Artificer-ua <metal.work3r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
prompt-toolkit = "3.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
