[tool.poetry]
name = "hw14"
version = "0.1.0"
description = ""
authors = ["Artificer-ua <metal.work3r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
cloudinary = "^1.38.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
fastapi-limiter = "^0.1.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.7"
pytest = "^8.0.0"
redis = "^5.0.1"
httpx = "^0.26.0"
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
ruff = "^0.2.1"
black = "^24.1.1"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests",]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"